Avoid crash when no TRC is present, but colorants are.

This happened with the ICC profile used by libJXL. This fixes the bug,
however, it would be good if we could find a workaround to load it as
a rec2100 pq colorspace. The CICP chunk is mallformed in this
particular profile, so that makes it a little hard.

BUG:501522